# web_RAG

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
AIAPI/: create_embeddings.py  data_reader.py
BackendAPI/: server.py
DB/: pyproject.toml
DB/src/db/: create_DB.py
FrontendAPI/: frontend.py
RAG_API/: 1.docx  RAG_Graph.py  __init__.py  engine.py  graph_logic.py
RAG_API/utills/: __init__.py  create_embeddings.py  data_reader.py
backend/: Dockerfile  pyproject.toml
backend/src/backend/: server.py
frontend/: Dockerfile  pyproject.toml
frontend/src/frontend/: frontend.py
rag/: pyproject.toml
rag/src/rag/: __init__.py  engine.py  graph_logic.py
rag/src/rag/utills/: __init__.py  create_embeddings.py  data_reader.py  split_text.py  tools.py  vectorstore.py
