[project]
name = "db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sawa", email = "savabondarenko2016@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "psycopg>=3.3.2",
]

[project.scripts]
db = "db:main"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
