[project]
name = "backend"
version = "0.0.1"
description = "My backend"
#readme = "README.md"
authors = [
    { name = "savelii-bondarenko", email = "savabondarenko2016@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.12.5",
    "rag",
    "uvicorn>=0.40.0",
]

[tool.uv.sources]
rag = {workspace = true}

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
