[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
#readme = "README.md"
authors = [
    { name = "savelii-bondarenko", email = "savabondarenko2016@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.52.2",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
